syntax = "proto3";

package tachiyomi;

message Backup {
  repeated BackupManga backupManga = 1;
  repeated BackupCategory backupCategories = 2;
  repeated BackupSource backupSources = 101;
}

message BackupManga {
  int64 source = 1;
  string url = 2;
  string title = 3;
  string artist = 4;
  string author = 5;
  string description = 6;
  repeated string genre = 7;
  int32 status = 8;
  string thumbnailUrl = 9;
  int64 dateAdded = 13;
  int32 viewer = 14;
  repeated BackupChapter chapters = 16;
  repeated int32 categories = 17;
  repeated BackupHistory history = 23;
}

message BackupChapter {
  string url = 1;
  string name = 2;
  string scanlator = 3;
  bool read = 4;
  int32 bookmark = 5;
  int64 lastPageRead = 6;
  int64 dateFetch = 7;
  int64 dateUpload = 8;
  float chapterNumber = 9;
  int64 sourceOrder = 10;
}

message BackupCategory {
  string name = 1;
  int32 order = 2;
  int32 flags = 3;
}

message BackupSource {
  string name = 1;
  int64 sourceId = 2;
}

message BackupHistory {
  string url = 1;
  int64 lastRead = 2;
  int64 readDuration = 3;
}
